# pyxspec_extension

./: .gitignore  LICENSE.md  README.md  custom_models.py  interface.py  plotter.py  pyproject.toml
examples/: nustar_isothermal.ipynb  prep-example-data.ipynb
examples/output/: background_archive.pkl  isothermal_archive.pkl  isothermal_with_pileup_and_background_archive.pkl  isothermal_with_pileup_archive.pkl
pyxspec_extension/: custom_models.py  interface.py  plotter.py
pyxspec_extension/config/: __init__.py  configuration.py  default.xconf  default_pileup.xconf
pyxspec_extension/styles/: model.mplstyle
styles/: model.mplstyle
