[project]
dynamic = ["version"]
name = "pyxspec_extension"
license = {file = "LICENSE.md"}
description = "Extension to the PyXSPEC package"
authors = [{name = "Reed B. Masek"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy",
    "imageio",
    "matplotlib",
    "numpy",
    "nustar_pysolar",
    "parse",
    "photutils",
    "regions",
    "ruptures",
    "scipy",
    "scikit-image",
    "sunpy"
]

[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "pyxspec_extension.__version__"}

[tool.setuptools.packages.find]
include = ["pyxspec_extension*"]